k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: todo-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-frontend

  template:
    metadata:
      labels:
        app: todo-frontend

    spec:
      containers:
        - name: frontend
          image: amiya0304/todo-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
