k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: todo-app

spec:
  selector:
    app: todo-backend

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
