k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: todo-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing

spec:
  type: LoadBalancer

  selector:
    app: todo-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
